--- a/CS249EventsApp.html
+++ b/CS249EventsApp.html
@@ -18,6 +18,7 @@
 		<div class="navbar-collapse collapse">
             <a class="navbar-brand" id="home">Home</a>
             <a class="navbar-brand" id="quickhelp">Quick Help</a>
+            <a class="navbar-brand" id="schedule">Schedule</a>
             
 			<ul class="nav navbar-nav navbar-right">
 				{{> loginButtons}} <!-- here -->
@@ -70,4 +71,14 @@
 			</form>
 		</li>
 	</div>
+</template>
+
+<template name="schedule">
+    <table>
+        <tr>
+            <td>Time</td>
+            <td>Event</td>
+            <td>Location</td>
+        </tr>
+    </table>
 </template>
