working multiple templates

--- a/CS249EventsApp.html
+++ b/CS249EventsApp.html
@@ -33,7 +33,10 @@
     {{#if quickHelpPage}}
     {{> quickHelp}}
     {{/if}}
+    
+    {{#if schedulepage}}
     {{> schedule}}
+    {{/if}}
 </body>
 
 <template name="home">
