--- a/CS249EventsApp.html
+++ b/CS249EventsApp.html
@@ -44,12 +44,16 @@
 	{{/if}}
 </body>
 
+<template name="plsLogin">
+	<div>You need to log in</div>
+</template>
+
 <template name="home">
-<div> HOME PAGE</div>
+	<div> HOME PAGE</div>
 </template>
 
 <template name="quickHelp">
-    
+    {{#if currentUser}}
     <section>
 		<div class="padding">
 			<form class="new-thread form-horizontal" style="padding-bottom: 40px !important;">
@@ -62,6 +66,9 @@
             </ul>
 		</div>
     </section>
+	{{else}}
+	{{> plsLogin}}	
+	{{/if}}
 </template>
     
 <template name="oneThread">
@@ -81,10 +88,13 @@
                 </form>
             </li>
         </div>
+	{{else}}
+	{{> plsLogin}}
     {{/if}}
 </template>
 
 <template name="schedule">
+	{{#if currentUser}}
     <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -106,10 +116,13 @@
             </tr>
         </tbody>
     </table>
-
+	{{else}}
+	{{> plsLogin}}
+	{{/if}}
 </template>
 
 <template name="manageEvents">
+	{{#if currentUser}}
 	<div class="col-md-6">
 		<form class="form-horizontal well eventsForm">
 		<fieldset>
@@ -140,8 +153,14 @@
 		<div class="list-group">
 			<li class="list-group-item active">List of Events</li>
 			{{#each events}}
-				<li class="list-group-item">Event #{{this.name}}</li>
+				<li class="list-group-item">
+					{{this.name}}
+					<button type="button" class="close remove">×</button>
+				</li>
 			{{/each}}
 		</div>
 	</div>
+	{{else}}
+	{{> plsLogin}}
+	{{/if}}
 </template>
