--- a/CS249EventsApp.html
+++ b/CS249EventsApp.html
@@ -104,18 +104,39 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            
-            <tr class="warning">
-            </tr>
-            <tr class="info">
-            </tr>
         </tbody>
     </table>
+    <div class="col-md-8 scheduleForm">
+        <form id="fillSchedule" class="form-horizontal">
+            <fieldset>
+            <legend>Add to Schedule</legend>
+            <div class="form-group">
+                <label for="inputEvent" class="col-lg-2 control-label">Event</label>
+                <div class="col-lg-10">
+                <input type="text" class="form-control" id="inputEvent" name="inputEvent" placeholder="Event">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputLocation" class="col-lg-2 control-label">Location</label>
+                <div class="col-lg-10">
+                <input type="text" class="form-control" id="inputLocation" name="inputLocation" placeholder="Location">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="datepicker" class="col-lg-2 control-label">Time</label>
+                <div class="col-lg-10">
+                <input type="text" class="form-control" id="datepicker" name="inputTime">
+                </div>
+            <div class="form-group">
+				<div class="col-lg-10 col-lg-offset-10">
+					<button type="submit" class="btn btn-primary">Submit</button>
+				</div>
+			</div>
+            </div>
+            
+            </fieldset>
+        </form>
+    </div>
 	{{else}}
 	{{> plsLogin}}
 	{{/if}}
