--- a/CS249EventsApp.html
+++ b/CS249EventsApp.html
@@ -123,7 +123,7 @@
 
 <template name="manageEvents">
 	{{#if currentUser}}
-	<div class="col-md-6">
+	<div class="col-md-5">
 		<form class="form-horizontal well eventsForm">
 		<fieldset>
 			<legend>Add an Event</legend>
@@ -141,7 +141,35 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<div class="col-lg-10 col-lg-offset-2">
+				<label for="startTime" class="col-lg-3 control-label">Start Date</label>
+				<div class='input-group date col-lg-9' id='startTime'>
+					<input type='text' class="form-control" name="startTime"/>
+					<span class="input-group-addon">
+						<span class="glyphicon glyphicon-calendar"></span>
+					</span>
+				</div>
+			</div>
+			<script type="text/javascript">
+				$(function () {
+					$('#startTime').datetimepicker();
+				});
+			</script>
+			<div class="form-group">
+				<label for="endTime" class="col-lg-3 control-label">End Date</label>
+				<div class='input-group date col-lg-9' id='endTime'>
+					<input type='text' class="form-control" name="endTime" />
+					<span class="input-group-addon">
+						<span class="glyphicon glyphicon-calendar"></span>
+					</span>
+				</div>
+			</div>
+			<script type="text/javascript">
+				$(function () {
+					$('#endTime').datetimepicker();
+				});
+			</script>
+			<div class="form-group">
+				<div class="col-lg-10 col-lg-offset-3">
 					<button type="reset" class="btn btn-default">Cancel</button>
 					<button type="submit" class="btn btn-primary">Submit</button>
 				</div>
@@ -149,16 +177,41 @@
 		</fieldset>
 		</form>
 	</div>
-	<div class="col-md-6">
+	<!-- <div class="list-group col-md-7">
+		<li class="list-group-item active">List of Events</li>
+		{{#each events}}
+			<li class="list-group-item">
+				{{this.name}}
+				<button type="button" class="close remove">×</button>
+			</li>
+		{{/each}}
+	</div>	 -->
+		
+		
+		
+	<div class="panel-group col-md-7" id="accordion" role="tablist" aria-multiselectable="true">
 		<div class="list-group">
 			<li class="list-group-item active">List of Events</li>
-			{{#each events}}
-				<li class="list-group-item">
-					{{this.name}}
-					<button type="button" class="close remove">×</button>
-				</li>
-			{{/each}}
 		</div>
+		{{#each events}}
+		<div class="panel panel-default">
+			<div class="panel-heading" role="tab">
+				<h4 class="panel-title">
+				<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#{{this._id}}" aria-expanded="false" aria-controls="collapseTwo">
+					{{this.name}}
+					{{#if createdByUser}}
+					<button type="button" class="close remove">×</button>
+					{{/if}}
+				</a>
+				</h4>
+			</div>
+			<div id="{{this._id}}" class="panel-collapse collapse" role="tabpanel">
+				<div class="panel-body">
+				{{this.description}}
+				</div>
+			</div>
+		</div>
+		{{/each}}
 	</div>
 	{{else}}
 	{{> plsLogin}}
