--- a/CS249EventsApp.html
+++ b/CS249EventsApp.html
@@ -242,7 +242,7 @@
 
 <template name="addEvents">
 	{{#if currentUser}}
-	<div class="col-md-7">
+	<div class="col-md-5">
 		<form class="form-horizontal well eventsForm">
 		<fieldset>
 			<legend>Add an Event</legend>
@@ -306,12 +306,30 @@
         
 	</div>
 				
-    <div class="panel-group col-md-5" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="panel-group col-md-7" id="accordion" role="tablist" aria-multiselectable="true">
 		<div class="list-group">
 			<li class="list-group-item active">List of Events</li>
 		</div>
 		{{#each events}}
 		<div class="panel panel-default">
+			<div class="panel-heading" role="tab">
+				<h4 class="panel-title">
+				<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#{{this._id}}" aria-expanded="false" aria-controls="collapseTwo">
+					{{this.name}}
+					{{#if createdByUser}}
+					<button type="button" class="close remove">×</button>
+					{{/if}}
+				</a>
+				</h4>
+			</div>
+			<div id="{{this._id}}" class="panel-collapse collapse" role="tabpanel">
+				<div class="panel-body">
+				{{this.description}}
+				</div>
+			</div>
+		</div>
+		{{/each}}
+	</div>
 	{{else}}
 	{{> plsLogin}}
 	{{/if}}
