--- a/CS249EventsApp.html
+++ b/CS249EventsApp.html
@@ -118,7 +118,7 @@
 			<tr class="info">
 				<td style="width: 20%;">
 					<div class='input-group date' id='datepicker'>
-					<input type='text' class="form-control" name="datepicker"/>
+					<input type='text' class="form-control" name="datepicker" id="dateinput"/>
 					<span class="input-group-addon">
 						<span class="glyphicon glyphicon-calendar"></span>
 					</span>
@@ -222,26 +222,30 @@
 				
     <div class="panel-group col-md-7" id="accordion" role="tablist" aria-multiselectable="true">
 		<div class="list-group">
-			<li class="list-group-item active">List of Events</li>
+			<li class="list-group-item active">Your Events</li>
 		</div>
 		{{#each events}}
+		{{#if createdByUser}}
 		<div class="panel panel-default">
 			<div class="panel-heading" role="tab">
 				<h4 class="panel-title">
 				<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#{{this._id}}" aria-expanded="false" aria-controls="collapseTwo">
 					{{this.name}}
-					{{#if createdByUser}}
 					<button type="button" class="close remove">×</button>
-					{{/if}}
 				</a>
 				</h4>
 			</div>
 			<div id="{{this._id}}" class="panel-collapse collapse" role="tabpanel">
 				<div class="panel-body">
-				{{this.description}}
+					<strong>Description:</strong> {{this.description}} <br><br>
+					<strong>Start Time:</strong> {{this.startTime}} <br><br>
+					<strong>End Time:</strong> {{this.endTime}} <br><br>
+					<strong>Created by:</strong> {{this.coordinator}} <br><br>
+					<strong>Shared with:</strong> {{this.cleanedShare}} <br><br>
 				</div>
 			</div>
 		</div>
+		{{/if}}
 		{{/each}}
 	</div>
 	{{else}}
@@ -263,9 +267,6 @@
 				<h4 class="panel-title">
 				<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#{{this._id}}" aria-expanded="false" aria-controls="collapseTwo">
 					{{this.name}}
-					{{#if createdByUser}}
-					<button type="button" class="close remove">×</button>
-					{{/if}}
 				</a>
 				</h4>
 			</div>
