connect events with pages

--- a/CS249EventsApp.html
+++ b/CS249EventsApp.html
@@ -142,7 +142,7 @@
 			{{#each calendar}}
 			<tr>
 				<td>{{timeDateString}}</td>
-				<td>{{this.event}}</td>
+				<td>{{this.task}}</td>
 				<td>{{this.location}}</td>
 				<td><button type="button" class="close remove">×</button></td>
 			</tr>
