--- a/CS249EventsApp.html
+++ b/CS249EventsApp.html
@@ -149,7 +149,7 @@
 				</td>
 			</tr>
 			{{/if}}
-			{{#each calendar}}
+			{{#each sortSchedule}}
 			<tr>
 				<td>{{timeDateString}}</td>
 				<td>{{this.task}}</td>
