--- a/CS249EventsApp.html
+++ b/CS249EventsApp.html
@@ -1,3 +1,8 @@
+<!--Filename: CS249EventsApp.html
+Author: Ella Chao, Priscilla Lee, Jamie Yip
+Date: May 3, 2015
+Goal: HTML for Events Organizer App
+-->
 <head>
   <title>CS249EventsApp</title>
 </head>
