fixed typo, changed simply application to simple application

--- a/CS249EventsApp.html
+++ b/CS249EventsApp.html
@@ -45,7 +45,7 @@ Goal: HTML for Events Organizer App
 		<h1 style="color: #428bca; text-align: center">Event Organizer!</h1>
 		<h2>Welcome to our events organizing system. As you hold your amazing 
             event, you do not need to worry about whether your participants
-            have any problems. They can contact you in our simply application!
+            have any problems. They can contact you in our simple application!
         </h2>
         <h2>Simply add your events to our system, and your participants will 
             be able to ask questions, recieve help and keep up to date with 
